Fix background image URL in sec1-wrap

--- a/SCSS/_sec1.scss
+++ b/SCSS/_sec1.scss
@@ -13,7 +13,7 @@ $third-color: #524848;
 
 .sec1-wrap {
     height: 693px;
-    background-image: url(/images_sec1/background.png);
+    background-image: url(images_sec1/background.png);
 
     .text {
         padding: 260px 0 0 90px;
